# fxbf

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  copy-g1a.sh
src/: helpers.c  helpers.h  main.c
